--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 -->
 
-    <div class="container-fluid bg-dark header">
+    <div class="h-50 container-fluid bg-dark ">
 
         <div class="row ">
 
@@ -56,7 +56,7 @@
                 WEIZHI ZHANG
             </div>
             <div class="col-6 ">
-                <img src="https://picsum.photos/200/200/?image=978" class=" rounded-circle">
+                <img src="https://picsum.photos/200/200/?image=978" class=" h-25 rounded-circle">
             </div>
         </div>
     </div>
