--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
     </div>
 -->
 
-    <div class="h-50 container-fluid bg-dark ">
+    <div class="h-50 container-fluid bg-dark  align-middle">
 
-        <div class="row ">
+        <div class="row align-middle">
 
-            <div class="col-4  title h1 text-light">
+            <div class="col-4  title h1 text-light align-middle">
                 WEIZHI ZHANG
             </div>
             <div class="col-6 ">
-                <img src="https://picsum.photos/200/200/?image=978" class=" h-25 rounded-circle">
+                <img src="https://picsum.photos/200/200/?image=978" class="align-middle h-50 rounded-circle">
             </div>
         </div>
     </div>
