--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
     <!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
+
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
     <!-- your CSS file link goes HERE -->
     <link rel="stylesheet" href="../css/main.css">
@@ -11,29 +15,33 @@
 </head>
 
 <body>
-    <!-- your content goes here -->
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark ">
-  <a class="navbar-brand" href="#">WEIZHI's SITE</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">PORTFOLIO</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">CONTACT</a>
-      </li>
-      
-    </ul>
-  </div>
-</nav>
 
-<!--
+
+    <!-- your content goes here -->
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark ">
+        <div class="container">
+            <a class="navbar-brand" href="#">WEIZHI's SITE</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">PORTFOLIO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">CONTACT</a>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!--
     <div class="container ">
         <div class="row">
             <div class="col-6 h4">
@@ -47,7 +55,26 @@
         </div>
     </div>
 -->
+    <div class="container-fluid bg-dark">
+        <table class="table h-50  container   ">
 
+            <tbody>
+                <tr>
+
+                    <td class="ml-4 h1 text-light align-top">
+                        WEIZHI ZHANG
+                    </td>
+                    <td class=" align-middle">
+                        <img src="https://picsum.photos/200/200/?image=978" class="h-50 rounded-circle">
+                    </td>
+
+                </tr>
+
+            </tbody>
+        </table>
+    </div>
+
+    <!--
     <div class="h-50 container-fluid bg-dark  align-middle">
 
         <div class="row align-middle">
@@ -60,14 +87,64 @@
             </div>
         </div>
     </div>
+-->
 
-    <div class="container sm-container-fluid  ">
+    <div class="container sm-container-fluid  mt-5">
         <div class="row">
-            <div class="col-4">bbbbbbbbbbbbbbbbbbbbbbbbbbbb</div>
-            <div class="col-4">cccccccccccccccccccccccccccc</div>
-            <div class="col-4">ddddddddddddddddddddddd</div>
+            <div class="col-lg-4 col-md-6 col-sm-12 mt-3 shadow">
+                <i class="fab fa-python fa-5x"></i>
 
-            
+                Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
+                Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
+                Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
+
+
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-12 mt-3 shadow">
+                <i class="fab fa-js fa-5x"></i>
+                Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
+                Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
+                Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
+
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-12 mt-3 shadow">
+                <i class="fab fa-html5 fa-5x"></i>
+                Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
+                Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
+                Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
+                Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
+                Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-12 mt-3 shadow">
+                <i class="fab fa-sass fa-5x"></i>
+
+                Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
+                Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
+                Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
+                Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
+
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-12 mt-3 shadow">
+                <i class="fab fa-css3 fa-5x"></i>
+                Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
+                Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
+                Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
+
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-12 mt-3 shadow">
+                <i class="fas fa-database fa-5x"></i>
+                Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
+                Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
+                Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
+                Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
+            </div>
+
+
 
         </div>
 
@@ -78,4 +155,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <!-- your JavaScript file(s) go here -->
+
+
 </body>
