--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">HOME <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">PORTFOLIO</a>
+                        <a class="nav-link" href="portfolio.html">PORTFOLIO</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">CONTACT</a>
+                        <a class="nav-link" href="contact.html">CONTACT</a>
                     </li>
 
                 </ul>
@@ -89,10 +89,10 @@
     </div>
 -->
 
-    <div class="container sm-container-fluid  mt-5">
-        <div class="row">
-            <div class="col-lg-4 col-md-6 col-sm-12 mt-3 shadow">
-                <i class="fab fa-python fa-5x"></i>
+    <div class="container   mt-5">
+        <div class="row ">
+            <div class=" col-lg-4 col-md-6 col-sm-12 my-1  p-3 shadow">
+                <i class="fab fa-python fa-5x float-left mr-3"></i>
 
                 Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
                 Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
@@ -101,16 +101,16 @@
 
             </div>
 
-            <div class="col-lg-4 col-md-6 col-sm-12 mt-3 shadow">
-                <i class="fab fa-js fa-5x"></i>
+            <div class="col-lg-4 col-md-6 col-sm-12 my-1  p-3 shadow">
+                <i class="fab fa-js fa-5x float-left mr-3"></i>
                 Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
                 Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
                 Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
 
             </div>
 
-            <div class="col-lg-4 col-md-6 col-sm-12 mt-3 shadow">
-                <i class="fab fa-html5 fa-5x"></i>
+            <div class="col-lg-4 col-md-6 col-sm-12 my-1  p-3 shadow">
+                <i class="fab fa-html5 fa-5x float-left mr-3"></i>
                 Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
                 Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
                 Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
@@ -118,7 +118,7 @@
                 Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
             </div>
 
-            <div class="col-lg-4 col-md-6 col-sm-12 mt-3 shadow">
+            <div class="col-lg-4 col-md-6 col-sm-12 my-1 p-3 shadow">
                 <i class="fab fa-sass fa-5x"></i>
 
                 Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
@@ -128,7 +128,7 @@
 
             </div>
 
-            <div class="col-lg-4 col-md-6 col-sm-12 mt-3 shadow">
+            <div class="col-lg-4 col-md-6 col-sm-12 my-1 p-3 shadow">
                 <i class="fab fa-css3 fa-5x"></i>
                 Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
                 Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
@@ -136,7 +136,7 @@
 
             </div>
 
-            <div class="col-lg-4 col-md-6 col-sm-12 mt-3 shadow">
+            <div class="col-lg-4 col-md-6 col-sm-12 my-1 p-3 shadow">
                 <i class="fas fa-database fa-5x"></i>
                 Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
                 Download SVGPerfect for when you want to use just one icon as a vector on the desktop or in your own icon workflow.
