--- a/portfolio.html
+++ b/portfolio.html
@@ -27,12 +27,12 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item ">
-                        <a class="nav-link" href="index.html">HOME <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">PORTFOLIO</a>
+                        <a class="nav-link" href="index.html">HOME</a>
                     </li>
                     <li class="nav-item active">
+                        <a class="nav-link" href="portfolio.html">PORTFOLIO</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="contact.html">CONTACT</a>
                     </li>
 
@@ -62,7 +62,7 @@
                 <tr>
 
                     <td class="ml-4 h1 text-light align-top">
-                        Contact for Hiring
+                       Portfolio
                     </td>
                     <td class=" align-middle">
                         <img src="https://picsum.photos/200/200/?image=978" class="h-50 rounded-circle">
@@ -89,67 +89,88 @@
     </div>
 -->
 
-    <div class="container   mt-5">
-        <form>
-            <div class="form-row">
+    <div class="container sm-container-fluid  mt-5">
+        <div class="row">
 
 
 
+            <div class="col-lg-4 col-md-6 col-sm-12 mt-3">
+                <div class=" card  shadow">
+                    <img class="card-img-top" src="https://picsum.photos/200/200/?image=978" alt="Card image">
+                    <div class="card-body">
+                        <h4 class="card-title">John Doe</h4>
+                        <p class="card-text">Some example text.</p>
+                        <a href="#" class="btn btn-primary">See Profile</a>
+                    </div>
 
-                <div class="col-md-4 mb-3">
-                    <label for="validationDefault01">Name</label>
-                    <input type="text" class="form-control" id="validationDefault01" placeholder="Name" value="" required>
 
                 </div>
-                <div class="col-md-4 mb-3">
-                    <label for="validationDefault02">Email</label>
-                    <input type="email" class="form-control" id="validationDefault02" placeholder="Email" value="" required>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12 mt-3">
+                <div class=" card  shadow">
+                    <img class="card-img-top" src="https://picsum.photos/200/200/?image=978" alt="Card image">
+                    <div class="card-body">
+                        <h4 class="card-title">John Doe</h4>
+                        <p class="card-text">Some example text.</p>
+                        <a href="#" class="btn btn-primary">See Profile</a>
+                    </div>
+
+
                 </div>
-                <div class="col-md-4 mb-3">
-                    <label for="validationDefaultUsername">Phone</label>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12 mt-3">
+                <div class=" card  shadow">
+                    <img class="card-img-top" src="https://picsum.photos/200/200/?image=978" alt="Card image">
+                    <div class="card-body">
+                        <h4 class="card-title">John Doe</h4>
+                        <p class="card-text">Some example text.</p>
+                        <a href="#" class="btn btn-primary">See Profile</a>
+                    </div>
 
 
-                    <input type="tel" class="form-control" id="validationDefaultUsername" placeholder="Phone" aria-describedby="inputGroupPrepend2" required>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12 mt-3">
+                <div class=" card  shadow">
+                    <img class="card-img-top" src="https://picsum.photos/200/200/?image=978" alt="Card image">
+                    <div class="card-body">
+                        <h4 class="card-title">John Doe</h4>
+                        <p class="card-text">Some example text.</p>
+                        <a href="#" class="btn btn-primary">See Profile</a>
+                    </div>
+
+
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12 mt-3">
+                <div class=" card  shadow">
+                    <img class="card-img-top" src="https://picsum.photos/200/200/?image=978" alt="Card image">
+                    <div class="card-body">
+                        <h4 class="card-title">John Doe</h4>
+                        <p class="card-text">Some example text.</p>
+                        <a href="#" class="btn btn-primary">See Profile</a>
+                    </div>
+
+
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12 mt-3">
+                <div class=" card  shadow">
+                    <img class="card-img-top" src="https://picsum.photos/200/200/?image=978" alt="Card image">
+                    <div class="card-body">
+                        <h4 class="card-title">John Doe</h4>
+                        <p class="card-text">Some example text.</p>
+                        <a href="#" class="btn btn-primary">See Profile</a>
+                    </div>
+
 
                 </div>
             </div>
             
-            <div class="form-row">
-                <div class="col-md-6 mb-3">
-                    <label for="validationDefault03">From</label>
-                    <input type="date" class="form-control" id="validationDefault03" placeholder="Date" required>
-                </div>
-                <div class="col-md-6 mb-3">
-                    <label for="validationDefault04">To</label>
 
 
-                    <input type="date" class="form-control" id="validationDefault04" placeholder="Date" required>
 
-
-                </div>
-
-            </div>
-            <div class="form-row">
-                <label for="comment">Job details</label>
-                <textarea class="form-control" rows="5" id="comment"></textarea>
-            </div>
-
-
-<!--
-            <div class="form-group">
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
-                    <label class="form-check-label" for="invalidCheck2">
-                        Agree to terms and conditions
-                    </label>
-                </div>
-            </div>
--->
-            <button class="btn btn-primary mt-3" type="submit">Submit form</button>
-
-
-        </form>
-
+        </div>
 
     </div>
 
