--- a/portfolio.html
+++ b/portfolio.html
@@ -94,78 +94,55 @@
 
 
 
-            <div class="col-lg-4 col-md-6 col-sm-12 mt-3">
+            <div class="col-lg-4 col-md-6 col-sm-12 mt-3 h-75">
                 <div class=" card  shadow">
-                    <img class="card-img-top" src="https://picsum.photos/200/200/?image=978" alt="Card image">
+                    <img class="card-img-top h-50" src="img/Screen%20Shot%202018-12-09%20at%205.06.49%20PM.png" alt="Card image">
                     <div class="card-body">
-                        <h4 class="card-title">John Doe</h4>
-                        <p class="card-text">Some example text.</p>
-                        <a href="#" class="btn btn-primary">See Profile</a>
+                        <h4 class="card-title">Note Talent</h4>
+                        <p class="card-text">A website help users to post content to blogs using Ever note.</p>
+                        <a href="http://notetalent.com" class="btn btn-primary">Link</a>
                     </div>
 
 
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 mt-3">
+            <div class="col-lg-4 col-md-6 col-sm-12 mt-3 h-75">
                 <div class=" card  shadow">
-                    <img class="card-img-top" src="https://picsum.photos/200/200/?image=978" alt="Card image">
+                    <img class="card-img-top h-50" src="img/unnamed.jpg" alt="Card image">
                     <div class="card-body">
-                        <h4 class="card-title">John Doe</h4>
-                        <p class="card-text">Some example text.</p>
-                        <a href="#" class="btn btn-primary">See Profile</a>
+                        <h4 class="card-title">Websites Platter</h4>
+                        <p class="card-text">An application which can open some websites at the same time.</p>
+                        <a href="https://play.google.com/store/apps/details?id=weizhi.ca.websitesplatter" class="btn btn-primary">Link</a>
                     </div>
 
 
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 mt-3">
+            <div class="col-lg-4 col-md-6 col-sm-12 mt-3 h-75">
                 <div class=" card  shadow">
-                    <img class="card-img-top" src="https://picsum.photos/200/200/?image=978" alt="Card image">
+                    <img class="card-img-top h-50" src="img/Screen%20Shot%202018-12-09%20at%205.18.28%20PM.png" alt="Card image">
                     <div class="card-body">
-                        <h4 class="card-title">John Doe</h4>
-                        <p class="card-text">Some example text.</p>
-                        <a href="#" class="btn btn-primary">See Profile</a>
+                        <h4 class="card-title">Official website of L'arche Ottawa</h4>
+                        <p class="card-text">I am the webmaster of L'arche Ottawa.</p>
+                        <a href="http://www.larcheottawa.org" class="btn btn-primary">Link</a>
                     </div>
 
 
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 mt-3">
+            <div class="col-lg-4 col-md-6 col-sm-12 mt-3 h-75">
                 <div class=" card  shadow">
-                    <img class="card-img-top" src="https://picsum.photos/200/200/?image=978" alt="Card image">
+                    <img class="card-img-top h-50" src="img/Screen%20Shot%202018-12-09%20at%205.21.06%20PM.png" alt="Card image">
                     <div class="card-body">
-                        <h4 class="card-title">John Doe</h4>
-                        <p class="card-text">Some example text.</p>
-                        <a href="#" class="btn btn-primary">See Profile</a>
+                        <h4 class="card-title">Weizhi's website</h4>
+                        <p class="card-text">My own website which introduce my own project and skills.</p>
+                        <a href="https://weizhizhang-al.github.io/Bootstrap-Website/" class="btn btn-primary">Link</a>
                     </div>
 
 
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 mt-3">
-                <div class=" card  shadow">
-                    <img class="card-img-top" src="https://picsum.photos/200/200/?image=978" alt="Card image">
-                    <div class="card-body">
-                        <h4 class="card-title">John Doe</h4>
-                        <p class="card-text">Some example text.</p>
-                        <a href="#" class="btn btn-primary">See Profile</a>
-                    </div>
-
-
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12 mt-3">
-                <div class=" card  shadow">
-                    <img class="card-img-top" src="https://picsum.photos/200/200/?image=978" alt="Card image">
-                    <div class="card-body">
-                        <h4 class="card-title">John Doe</h4>
-                        <p class="card-text">Some example text.</p>
-                        <a href="#" class="btn btn-primary">See Profile</a>
-                    </div>
-
-
-                </div>
-            </div>
+            
             
 
 
