--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
     <!-- your CSS file link goes HERE -->
     <link rel="stylesheet" href="../css/main.css">
-
+    <link rel="stylesheet" type="text/css" href="../css/custom.css">
 
 </head>
 
@@ -20,14 +20,14 @@
     <!-- your content goes here -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark ">
         <div class="container">
-            <a class="navbar-brand" href="#">WEIZHI's SITE</a>
+            <a class="navbar-brand " href="index.html">WEIZHI's SITE</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">HOME <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">HOME </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="portfolio.html">PORTFOLIO</a>
@@ -74,21 +74,7 @@
         </table>
     </div>
 
-    <!--
-    <div class="h-50 container-fluid bg-dark  align-middle">
-
-        <div class="row align-middle">
-
-            <div class="col-4  title h1 text-light align-middle">
-                WEIZHI ZHANG
-            </div>
-            <div class="col-6 ">
-                <img src="https://picsum.photos/200/200/?image=978" class="align-middle h-50 rounded-circle">
-            </div>
-        </div>
-    </div>
--->
-
+    
     <div class="container   mt-5">
         <div class="row ">
             <div class=" col-lg-4 col-md-6 col-sm-12 my-1  p-3 shadow">
