--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
     <!-- your CSS file link goes HERE -->
     <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" type="text/css" href="../css/custom.css">
 
 
 </head>
@@ -25,7 +26,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav ml-auto">
                     <li class="nav-item ">
                         <a class="nav-link" href="index.html">HOME</a>
                     </li>
@@ -61,7 +62,7 @@
             <tbody>
                 <tr>
 
-                    <td class="ml-4 h1 text-light align-top">
+                    <td class="ml-4 h1 text-light align-top ">
                        Portfolio
                     </td>
                     <td class=" align-middle">
