--- a/portfolio.html
+++ b/portfolio.html
@@ -96,7 +96,7 @@
 
             <div class="col-lg-4 col-md-6 col-sm-12 mt-3 h-75">
                 <div class=" card  shadow">
-                    <img class="card-img-top h-50" src="img/Screen%20Shot%202018-12-09%20at%205.06.49%20PM.png" alt="Card image">
+                    <img class="img-thumbnail card-img-top h-50" src="img/Screen%20Shot%202018-12-09%20at%205.06.49%20PM.png" alt="Card image">
                     <div class="card-body">
                         <h4 class="card-title">Note Talent</h4>
                         <p class="card-text">A website help users to post content to blogs using Ever note.</p>
@@ -108,7 +108,7 @@
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12 mt-3 h-75">
                 <div class=" card  shadow">
-                    <img class="card-img-top h-50" src="img/unnamed.jpg" alt="Card image">
+                    <img class="img-thumbnail card-img-top h-50" src="img/unnamed.jpg" alt="Card image">
                     <div class="card-body">
                         <h4 class="card-title">Websites Platter</h4>
                         <p class="card-text">An application which can open some websites at the same time.</p>
@@ -120,7 +120,7 @@
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12 mt-3 h-75">
                 <div class=" card  shadow">
-                    <img class="card-img-top h-50" src="img/Screen%20Shot%202018-12-09%20at%205.18.28%20PM.png" alt="Card image">
+                    <img class="img-thumbnail card-img-top h-50" src="img/Screen%20Shot%202018-12-09%20at%205.18.28%20PM.png" alt="Card image">
                     <div class="card-body">
                         <h4 class="card-title">Official website of L'arche Ottawa</h4>
                         <p class="card-text">I am the webmaster of L'arche Ottawa.</p>
@@ -132,7 +132,7 @@
             </div>
             <div class="col-lg-4 col-md-6 col-sm-12 mt-3 h-75">
                 <div class=" card  shadow">
-                    <img class="card-img-top h-50" src="img/Screen%20Shot%202018-12-09%20at%205.21.06%20PM.png" alt="Card image">
+                    <img class="img-thumbnail card-img-top h-50" src="img/Screen%20Shot%202018-12-09%20at%205.21.06%20PM.png" alt="Card image">
                     <div class="card-body">
                         <h4 class="card-title">Weizhi's website</h4>
                         <p class="card-text">My own website which introduce my own project and skills.</p>
